Bug 129076 - impress slideshow crashes with skia backend
Summary: impress slideshow crashes with skia backend
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2019-11-28 09:37 UTC by Caolán McNamara
Modified: 2019-12-10 10:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2019-11-28 09:37:28 UTC
Description:
under X with gen backend and skia enabled starting a slideshow will assert with...

#4  0x00007fffda7e59f4 in X11SkiaSalVirtualDevice::X11SkiaSalVirtualDevice(SalGraphics const*, long, long, SystemGraphicsData const*, std::unique_ptr<X11SalGraphics, std::default_delete<X11SalGraphics> >) (this=0x271d720, pGraphics=0x1b56960, nDX=1920, nDY=1080, pData=0x7fffffffba00, pNewGraphics=...)
    at /home/caolan/LibreOffice/core/vcl/skia/x11/salvd.cxx:45
#5  0x00007fffda7bdfeb in X11SalInstance::CreateX11VirtualDevice(SalGraphics const*, long&, long&, DeviceFormat, SystemGraphicsData const*, std::unique_ptr<X11SalGraphics, std::default_delete<X11SalGraphics> >)
    (pGraphics=0x1b56960, nDX=@0x7fffffffb5c8: 1920, nDY=@0x7fffffffb5c0: 1080, eFormat=DeviceFormat::DEFAULT, pData=0x7fffffffba00, pNewGraphics=...)
    at /home/caolan/LibreOffice/core/vcl/unx/generic/gdi/salvd.cxx:47
#6  0x00007fffda7be21f in X11SalInstance::CreateVirtualDevice(SalGraphics*, long&, long&, DeviceFormat, SystemGraphicsData const*) (
    this=0x43b980, pGraphics=0x1b56960, nDX=@0x7fffffffb5c8: 1920, nDY=@0x7fffffffb5c0: 1080, eFormat=DeviceFormat::DEFAULT, pData=0x7fffffffba00)
    at /home/caolan/LibreOffice/core/vcl/unx/generic/gdi/salvd.cxx:59
#7  0x00007ffff04ad36e in VirtualDevice::ImplInitVirDev(OutputDevice const*, long, long, SystemGraphicsData const*) (
    this=0x541a00, pOutDev=0x18cecd0, nDX=1920, nDY=1080, pData=0x7fffffffba00) at /home/caolan/LibreOffice/core/vcl/source/gdi/virdev.cxx:139

Actual Results:
assert

Expected Results:
success


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Julien Nabet 2019-11-28 10:49:53 UTC
On Win10 with master sources updated today + skia enabled, I had a freeze.
I just noticed these logs:
warn:legacy.osl:15476:17012:canvas/source/vcl/spritehelper.cxx:154: CanvasCustomSprite::redraw(): Mask bitmap is not monochrome (performance!)
Comment 2 Commit Notification 2019-12-10 10:06:47 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4c28826e0f8716583e7663ca2ea7a25079f2583

force vclcanvas use with Skia, like it's with OpenGL (tdf#129076)

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.