force vclcanvas use with Skia, like it's with OpenGL (tdf#129076)

Related to tdf#93870.

Change-Id: Ie0cb64c05c0fde6a774ce8558d06943870e775fe
Reviewed-on: https://gerrit.libreoffice.org/84758
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>